<resources>
    <string name="app_name">UD2-Ejemplo01</string>
    <string name="initial_title">¿Se te olvidan las tareas pendientes?</string>
    <string name="initial_button_description">Siguiente</string>
    <string name="initial_image_description">Ilustración de una chica con una lista de tareas</string>

    <string name="initial_second_button">Regístrate</string>
    <string name="initial_second_title">¿Necesitas orden para alcanzar tus metas?</string>
    <string name="initial_second_image_description">Ilustración de una chica cargando una caja de papeles</string>

    <string name="sign_up_button">Finalizar</string>
    <string name="sign_up_title">Ya casi está, yujuu!!</string>
    <string name="sign_up_subtitle">Necesitamos saber cómo dirigirnos a ti</string>
    <string name="sign_up_name_hint">Dinos tu nombre</string>
    <string name="sign_up_mail_hint">¿Cuál es tu email?</string>
    <string name="sign_up_image_description">Ilustración de un chico vestido de cocodrilo</string>
    <string name="sign_up_empty_field_error">Por favor, rellena todos los campos</string>
    <string name="sign_up_newsletter">Te enviaremos todas nuestras novedades a: </string>

    <string name="welcome_title">Bienvenid@</string>
    <string name="welcome_image_description">Ilustración tres personas subiendo una cima</string>




</resources>